--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -16,7 +16,7 @@
       {% for category in filters.categories %}
         {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
         <option value="{{ category }}" {% if filters.query.category == category %}selected{% endif %}>
-          {% for step in (1..ident) %} {{ "&nbsp;" }} {% endfor %}
+          {% for step in (1..ident) %} {% print "&nbsp;" %} {% endfor %}
           {{ 'categories.' | append: category | t }}
         </option>
       {% endfor %}
