--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -19,8 +19,7 @@
 
     <div class="my-3">
       <label class="block" for="name">{{ 'app.items.form.name' | t }}</label>
-      <input class="w-2/3 form-input" type="text" id="name" name="item[name]" value="{{ item.name }}" autofocus required
-        />
+      <input class="w-2/3 form-input" type="text" id="name" name="item[name]" value="{{ item.name }}" autofocus required />
       {% include 'theme/simple/field_error', errors: object.errors.name %}
     </div>
 
@@ -35,7 +34,7 @@
         {% for category in lib.categories %}
           {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
           <option value="{{ category }}" {% if item.category == category %}selected{% endif %}>
-              {% for step in (1..ident) %} {{ "&nbsp;" }} {% endfor %}
+              {% for step in (1..ident) %} {% print "&nbsp;" %} {% endfor %}
               {{ 'categories.' | append: category | t }}
           </option>
         {% endfor %}
@@ -46,8 +45,7 @@
 
     <div class="mt-3">
       <label class="block" for="description">{{ 'app.items.form.description' | t }}</label>
-      <textarea class="w-full form-input" type="text" id="description" name="item[description]" rows="3"
-        required>{{ item.description }}</textarea>
+      <textarea class="w-full form-input" type="text" id="description" name="item[description]" rows="3" required>{{ item.description }}</textarea>
 
       {% include 'theme/simple/field_error', errors: object.errors.description %}
     </div>
