Set the pay button's return to param to the orders

--- a/app/views/partials/theme/simple/dashboard/orders/actions/buyer.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions/buyer.liquid
@@ -14,6 +14,6 @@
     name: 'paid',
     scope: 'app.statuses.orders',
     object_id: order.id,
-    return_to: context.location.href,
+    return_to: '/dashboard/buy/orders',
     label: 'app.orders.checkout.pay-manually' %}
 {% endif %}
