--- a/app/views/pages/statuses/create.liquid
+++ b/app/views/pages/statuses/create.liquid
@@ -10,7 +10,8 @@ method: post
   if object.valid
     include 'lib/commands/events/create', type: 'status_created', actor_id: current_profile.id, object_id: object.id, target_id: object.object_id
 
-    include 'redirect_to', url: '/statuses'
+    assign redirect_to = context.params.return_to | default: '/statuses'
+    include 'redirect_to', url: redirect_to
   else
     log object
     include 'theme/simple/statuses/new', object: object
