--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -1,7 +1,7 @@
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
   include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
-  include 'lib/must_be_superadmin'
+  include 'lib/must_be_superadmin', profile: current_profile
 
   include 'theme/simple/admin/menu', section: 'home'
 
