--- a/app/views/pages/admin/support-tickets/show.liquid
+++ b/app/views/pages/admin/support-tickets/show.liquid
@@ -4,7 +4,7 @@ slug: admin/support-tickets/show
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
   include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
-  include 'lib/must_be_superadmin'
+  include 'lib/must_be_superadmin', profile: current_profile
 
   assign contact_id = context.params.slugs | split: '-' | last
   function contact = 'lib/queries/contacts/find', id: contact_id
