--- a/app/views/pages/marketplace_setup/create.liquid
+++ b/app/views/pages/marketplace_setup/create.liquid
@@ -3,7 +3,8 @@ slug: marketplace_setup
 method: post
 ---
 {% liquid
-  include 'lib/must_be_superadmin'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/must_be_superadmin', profile: current_profile
   function object = 'lib/commands/marketplace_setup/create/call', constants: context.params.constants, context: context
   if object.valid
     redirect_to '/'
