--- a/app/views/partials/lib/must_be_superadmin.liquid
+++ b/app/views/partials/lib/must_be_superadmin.liquid
@@ -1,7 +1,6 @@
 {% liquid
-  assign valid = true
   assign superadmins = context.constants.superadmins | split: ','
-  unless superadmins contains context.current_user.email
+  unless superadmins contains profile.user.email
     include 'lib/flash/publish', error: 'app.errors.unauthorized'
 
     redirect_to '/sessions/new'
