--- a/app/views/partials/lib/commands/items/create.liquid
+++ b/app/views/partials/lib/commands/items/create.liquid
@@ -7,8 +7,7 @@
 
     if object.valid
       assign now = 'now' | to_time
-      function relation = 'lib/commands/relationships/create', name: 'ownership', l_id: current_profile.id, r_id: object.id, l_at: now, r_at: now
-      function status = 'lib/commands/statuses/create', object: object, name: 'app.statues.items.created', timestamp: now
+      function relation = 'lib/commands/relationships/create', name: 'ownership', l_id: owner, r_id: object.id, l_at: now, r_at: now
     endif
   endif
 
