--- a/app/views/partials/lib/commands/groups/create.liquid
+++ b/app/views/partials/lib/commands/groups/create.liquid
@@ -6,7 +6,7 @@
     function object = 'lib/commands/execute', mutation_name: 'groups/create' object: object
 
     assign now = 'now' | to_time
-    function relation = 'lib/commands/relationships/create', name: 'owner', l_id: owner_id, r_id: object.id, l_at: now, r_at: now
+    function relation = 'lib/commands/relationships/create', name: 'owner', l_id: owner_id, r_id: object.id, l_at: now, r_at: now, membership: true
   endif
 
   return object
