--- a/app/views/partials/lib/commands/constants/set/build.liquid
+++ b/app/views/partials/lib/commands/constants/set/build.liquid
@@ -1,6 +1,7 @@
 {% parse_json mapping %}
  {
-   "chat":  "USE_WEBSOCKET_CHAT"
+   "chat":  "USE_WEBSOCKET_CHAT",
+   "slack": "SLACK_WEBHOOK_URL"
  }
 {% endparse_json %}
 
