--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -41,10 +41,23 @@
     <form action="/marketplace_setup/constants/set" method="post">
       {% include 'authenticity_token' %}
       <input type="hidden" name="name" value="chat">
-      <input type="radio" class="mt-3" name="value" value="true" id="test"{% if chat_enabled %}checked{% endif %}>
-      <label class="block mt-4" for="test">enable</label>
-      <input type="radio" class="mt-3" name="value" value="false" id="test2"{% unless chat_enabled %}checked{% endunless %}>
-      <label class="block mt-4" for="test2">disable</label>
+      <input type="radio" class="mt-3" name="value" value="true" id="chatOn"{% if chat_enabled %}checked{% endif %}>
+      <label class="block mt-4" for="chatOn">enable</label>
+      <input type="radio" class="mt-3" name="value" value="false" id="chatOff"{% unless chat_enabled %}checked{% endunless %}>
+      <label class="block mt-4" for="chatOff">disable</label>
+      <input type="submit" value="submit" class="mt-3 button">
+    </form>
+  </div>
+
+  <div class="mb-2 w-full md:w-full">
+    <h1 class="text-2xl">Slack Notifications</h1>
+  </div>
+
+  <div class="w-full p-6 mt-8 mb-2 bg-gray-200 rounded lg:w-4/6 md:w-3/4">
+    <form action="/marketplace_setup/constants/set" method="post">
+      {% include 'authenticity_token' %}
+      <input type="hidden" name="name" value="slack"></input>
+      <input type="text" name="value" value="text"></input>
       <input type="submit" value="submit" class="mt-3 button">
     </form>
   </div>
