--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -19,7 +19,7 @@ metadata:
         <div class="mb-1 border styleGuide-colorBox">
           <div class="h-32 bg-page"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Page background' %}
+        <h4 class="subtitle">Page background</h4>
         <dl class="flex flex-wrap justify-between">
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -39,7 +39,7 @@ metadata:
         <div class="mb-1 border styleGuide-colorBox">
           <div class="h-32 bg-panel"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Panel background' %}
+        <h4 class="subtitle">Page background</h4>
         <dl>
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -59,7 +59,7 @@ metadata:
         <div class="mb-1 border styleGuide-colorBox">
           <div class="h-32 bg-frame"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Frames' %}
+        <h4 class="subtitle">Frames</h4>
         <dl>
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -81,7 +81,7 @@ metadata:
           <div class="h-8 bg-content-sidenote"></div>
           <div class="h-8 bg-content-inverted"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Text' %}
+        <h4 class="subtitle">Text</h4>
         <dl class="flex flex-wrap justify-between">
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -103,7 +103,7 @@ metadata:
           <div class="h-8 bg-interaction-hover"></div>
           <div class="h-8 bg-interaction-disabled"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Interactive element' %}
+        <h4 class="subtitle">Interactive elements</h4>
         <dl class="flex flex-wrap justify-between">
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -125,7 +125,7 @@ metadata:
           <div class="h-8 bg-danger-hover"></div>
           <div class="h-8 bg-danger-disabled"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Danger' %}
+        <h4 class="subtitle">Danger</h4>
         <dl class="flex flex-wrap justify-between">
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -147,7 +147,7 @@ metadata:
           <div class="h-8 bg-confirmation-hover"></div>
           <div class="h-8 bg-confirmation-disabled"></div>
         </div>
-        {% render 'theme/simple/ui/subtitle', label: 'Confirmation' %}
+        <h4 class="subtitle">Confirmation</h4>
         <dl class="flex flex-wrap justify-between">
           <div class="flex justify-between w-full">
             <dt>Class suffix:</dt>
@@ -193,7 +193,7 @@ metadata:
 
     <div class="flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Text content' %}
+        <h4 class="subtitle">Text content</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="pr-5 table-cell">Color:</dt>
@@ -221,8 +221,12 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Big titles' %}
+        <h4 class="subtitle">Big titles</h4>
         <dl class="table">
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Class:</dt>
+            <dd class="table-cell font-mono styleGuide-class"></dd>
+          </div>
           <div class="table-row">
             <dt class="pr-5 table-cell">Color:</dt>
             <dd class="table-cell font-mono styleGuide-color"></dd>
@@ -240,15 +244,6 @@ metadata:
             <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
-        <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
-          {% raw %}{% render 'theme/simple/ui/bigtitle', label: 'Example title' %}{% endraw %}
-          <button class="float-right styleGuide-copy" title="Copy to clipboard">
-            <svg width="24" height="24" class="text-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21.75C16.5 22.5784 15.8284 23.25 15 23.25H4.5C3.67157 23.25 3 22.5784 3 21.75V8.25C3 7.42157 3.67157 6.75 4.5 6.75H12.129C12.5265 6.75008 12.9078 6.90798 13.189 7.189L16.061 10.061C16.342 10.3422 16.4999 10.7235 16.5 11.121V21.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M7.5 6.75V2.25C7.5 1.42157 8.17157 0.75 9 0.75H16.629C17.0265 0.750085 17.4078 0.907982 17.689 1.189L20.561 4.061C20.842 4.3422 20.9999 4.72345 21 5.121V15.75C21 16.5784 20.3284 17.25 19.5 17.25H16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
-        </div>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
         {% render 'theme/simple/ui/bigtitle', label: 'Example title' %}
@@ -257,8 +252,12 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Titles' %}
+        <h4 class="subtitle">Titles</h4>
         <dl class="table">
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Class:</dt>
+            <dd class="table-cell font-mono styleGuide-class"></dd>
+          </div>
           <div class="table-row">
             <dt class="pr-5 table-cell">Color:</dt>
             <dd class="table-cell font-mono styleGuide-color"></dd>
@@ -276,15 +275,6 @@ metadata:
             <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
-        <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
-          {% raw %}{% render 'theme/simple/ui/title', label: 'Example title' %}{% endraw %}
-          <button class="float-right styleGuide-copy" title="Copy to clipboard">
-            <svg width="24" height="24" class="text-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21.75C16.5 22.5784 15.8284 23.25 15 23.25H4.5C3.67157 23.25 3 22.5784 3 21.75V8.25C3 7.42157 3.67157 6.75 4.5 6.75H12.129C12.5265 6.75008 12.9078 6.90798 13.189 7.189L16.061 10.061C16.342 10.3422 16.4999 10.7235 16.5 11.121V21.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M7.5 6.75V2.25C7.5 1.42157 8.17157 0.75 9 0.75H16.629C17.0265 0.750085 17.4078 0.907982 17.689 1.189L20.561 4.061C20.842 4.3422 20.9999 4.72345 21 5.121V15.75C21 16.5784 20.3284 17.25 19.5 17.25H16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
-        </div>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
         {% render 'theme/simple/ui/title', label: 'Example title' %}
@@ -293,8 +283,12 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Subtitles' %}
+        <h4 class="subtitle">Subtitles</h4>
         <dl class="table">
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Class:</dt>
+            <dd class="table-cell font-mono styleGuide-class"></dd>
+          </div>
           <div class="table-row">
             <dt class="pr-5 table-cell">Color:</dt>
             <dd class="table-cell font-mono styleGuide-color"></dd>
@@ -312,24 +306,15 @@ metadata:
             <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
-        <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
-          {% raw %}{% render 'theme/simple/ui/subtitle', label: 'Example subtitle' %}{% endraw %}
-          <button class="float-right styleGuide-copy" title="Copy to clipboard">
-            <svg width="24" height="24" class="text-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21.75C16.5 22.5784 15.8284 23.25 15 23.25H4.5C3.67157 23.25 3 22.5784 3 21.75V8.25C3 7.42157 3.67157 6.75 4.5 6.75H12.129C12.5265 6.75008 12.9078 6.90798 13.189 7.189L16.061 10.061C16.342 10.3422 16.4999 10.7235 16.5 11.121V21.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M7.5 6.75V2.25C7.5 1.42157 8.17157 0.75 9 0.75H16.629C17.0265 0.750085 17.4078 0.907982 17.689 1.189L20.561 4.061C20.842 4.3422 20.9999 4.72345 21 5.121V15.75C21 16.5784 20.3284 17.25 19.5 17.25H16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
-        </div>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
-        {% render 'theme/simple/ui/subtitle', label: 'Example subtitle' %}
+        <h4 class="subtitle">Example subtitle</h4>
       </section>
     </div>
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Sidenotes' %}
+        <h4 class="subtitle">Sidenotes</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="pr-5 table-cell">Class:</dt>
@@ -366,7 +351,7 @@ metadata:
 
     <div class="flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Links' %}
+        <h4 class="subtitle">Links</h4>
         <dl>
           <div>
             <dt>Color:</dt>
@@ -381,7 +366,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Buttons' %}
+        <h4 class="subtitle">Buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -407,7 +392,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Buttons' %}
+        <h4 class="subtitle">Icon buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -431,7 +416,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Secondary buttons' %}
+        <h4 class="subtitle">Secondary buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -457,7 +442,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Danger buttons' %}
+        <h4 class="subtitle">Danger buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -483,7 +468,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Small buttons' %}
+        <h4 class="subtitle">Small buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -503,7 +488,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Small secondary buttons' %}
+        <h4 class="subtitle">Small secondary buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -523,7 +508,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Compact buttons' %}
+        <h4 class="subtitle">Compact buttons</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -554,7 +539,7 @@ metadata:
 
     <div class="flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Checkboxes' %}
+        <h4 class="subtitle">Checkboxes</h4>
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
         <fieldset>
@@ -568,7 +553,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Radios' %}
+        <h4 class="subtitle">Radios</h4>
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
         <fieldset>
@@ -582,7 +567,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Text inputs' %}
+        <h4 class="subtitle">Text inputs</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Modifiers:</dt>
@@ -602,7 +587,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Small text inputs' %}
+        <h4 class="subtitle">Small text inputs</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -622,7 +607,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Selects' %}
+        <h4 class="subtitle">Selects</h4>
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
         <select>
@@ -636,7 +621,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Form tip' %}
+        <h4 class="subtitle">Form tip</h4>
         <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
           {% raw %}{% render 'theme/simple/ui/form-tip', content: 'Lorem ipsum dolor sit amet…'  %}{% endraw %}
           <button class="float-right styleGuide-copy" title="Copy to clipboard">
@@ -670,7 +655,7 @@ metadata:
 
     <div class="flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Card' %}
+        <h4 class="subtitle">Card</h4>
         <dl class="table">
           <div class="table-row">
             <dt class="table-cell">Class:</dt>
@@ -695,7 +680,7 @@ metadata:
 
     <div class="flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Breadcrumbs' %}
+        <h4 class="subtitle">Breadcrumbs</h4>
         <div class="p-5 border bg-panel font-mono whitespace-pre styleGuide-code">{% raw %}---
 metadata:
   breadcrumbs:
@@ -734,7 +719,7 @@ metadata:
 
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
-        {% render 'theme/simple/ui/subtitle', label: 'Tags' %}
+        <h4 class="subtitle">Tags</h4>
         <div class="mt-5 p-5 border bg-panel font-mono whitespace-pre-wrap styleGuide-code">tags = ['tag #1', 'tag #2']</div>
         <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
           {% raw %}{% render 'theme/simple/ui/tags', tags: tags, url: 'http://platformos.com/?tag='  %}{% endraw %}
