Replaced titles partial with class

--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -12,7 +12,7 @@ metadata:
 
   <article id="styleGuide-colors">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Colors' %}
+      <h3 class="title">Colors</h3>
     </header>
     <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-10">
       <li>
@@ -168,7 +168,7 @@ metadata:
 
   <article id="styleGuide-icons" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Icons' %}
+      <h3 class="title">Icons</h3>
     </header>
 
     <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
@@ -188,7 +188,7 @@ metadata:
 
   <article id="styleGuide-typography" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Typography' %}
+      <h3 class="title">Typography</h3>
     </header>
 
     <div class="flex gap-10">
@@ -277,7 +277,7 @@ metadata:
         </dl>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
-        {% render 'theme/simple/ui/title', label: 'Example title' %}
+        <h3 class="title">Example title</h3>
       </section>
     </div>
 
@@ -346,7 +346,7 @@ metadata:
 
   <article id="styleGuide-linksButtons" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Links and buttons' %}
+      <h3 class="title">Links and buttons</h3>
     </header>
 
     <div class="flex gap-10">
@@ -534,7 +534,7 @@ metadata:
 
   <article id="styleGuide-forms" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Forms' %}
+      <h3 class="title">Forms</h3>
     </header>
 
     <div class="flex gap-10">
@@ -650,7 +650,7 @@ metadata:
 
   <article id="styleGuide-boxes" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Boxes' %}
+      <h3 class="title">Boxes</h3>
     </header>
 
     <div class="flex gap-10">
@@ -675,7 +675,7 @@ metadata:
 
   <article id="styleGuide-navigation" class="mt-20">
     <header>
-      {% render 'theme/simple/ui/title', label: 'Navigation elements' %}
+      <h3 class="title">Navigation elements</h3>
     </header>
 
     <div class="flex gap-10">
