--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -246,7 +246,7 @@ metadata:
         </dl>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
-        {% render 'theme/simple/ui/bigtitle', label: 'Example title' %}
+        <h2 class="bigtitle">Example title</h2>
       </section>
     </div>
 
