--- a/app/views/partials/theme/simple/posts/index.liquid
+++ b/app/views/partials/theme/simple/posts/index.liquid
@@ -1,7 +1,7 @@
 <div class="w-full mx-auto">
 
   <header class="mb-5 md:flex items-center justify-between">
-    {% render 'theme/simple/ui/bigtitle', label_key: 'app.models.posts.title' %}
+    <h2 class="bigtitle">{{ 'app.models.posts.title' | t }}</h2>
 
     <a href="/dashboard/posts/new" class="button">
       {{ 'app.models.posts.add' | t }}
