formatting for longer group's description

--- a/app/views/partials/theme/simple/groups/about.liquid
+++ b/app/views/partials/theme/simple/groups/about.liquid
@@ -16,7 +16,7 @@
 
     <div class="mt-10">
       {{ 'app.groups.description' | t }}
-      <p class="mt-5 text-lg">
+      <p class="mt-5 text-lg break-words">
         {{ group.description }}
       </p>
     </div>
