--- a/app/views/partials/theme/simple/authentication_links/new.liquid
+++ b/app/views/partials/theme/simple/authentication_links/new.liquid
@@ -1,5 +1,5 @@
 <section class="my-10 container items-center">
-  <h2 class="title text-center">{{ 'app.account.reset_password.title' | t }}</h2>
+  <h2 class="bigtitle text-center">{{ 'app.account.reset_password.title' | t }}</h2>
 
   <form action="/authentication_links/create" method="post" class="card w-full md:w-96 mx-auto">
     {% include 'authenticity_token' %}
