--- a/app/views/partials/theme/simple/contacts/new.liquid
+++ b/app/views/partials/theme/simple/contacts/new.liquid
@@ -1,4 +1,4 @@
-<h1 class="mb-3 text-2xl">{{ 'app.models.contacts.contact-us' | t }}</h1>
+<h2 class="bigtitle">{{ 'app.models.contacts.contact-us' | t }}</h2>
 
 {% liquid
   if object.id
