--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto mb-10">
-  <h1 class="text-2xl">{{ 'app.profiles.edit' | t }}</h1>
+  <h2 class="bigtitle">{{ 'app.profiles.edit' | t }}</h2>
 </div>
 
 <div class="sm:flex">
