--- a/app/views/partials/theme/simple/groups/cards.liquid
+++ b/app/views/partials/theme/simple/groups/cards.liquid
@@ -1,6 +1,6 @@
-<h1 class="mb-3 text-2xl font-medium">
+<h2 class="bigtitle">
   {{ 'app.groups.list' | t }}
-</h1>
+</h2>
 
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 md:gap-5">
   {% for record in list.results %}
