--- a/app/views/partials/theme/simple/payments/account/show.liquid
+++ b/app/views/partials/theme/simple/payments/account/show.liquid
@@ -1,6 +1,6 @@
-<h2 class="text-2xl">
+<h2 class="title">
   {{ 'app.payments.account.show.account_information' | t }}
-</h2>
+</h2>ads
 {% if account.id != blank  %}
 
   {%- if account.state == "pending" -%}
