--- a/app/views/partials/theme/simple/profile/owner_actions.liquid
+++ b/app/views/partials/theme/simple/profile/owner_actions.liquid
@@ -1,8 +1,8 @@
 <section class="pt-4 mt-4 border-t">
 
   <header class="mb-2 md:flex md:justify-between">
-    <div class="text-2xl font-medium text-grey-darkest" data-tc="user-name">
-      {{ user.first_name }} {{ user.last_name }} <span class="font-normal">({{ user.name }})</span>
+    <div class="title text-center" data-tc="user-name">
+      <strong class="font-semibold">{{ user.first_name }} {{ user.last_name }}</strong> ({{ user.name }})
     </div>
 
     <!--
