--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -1,5 +1,5 @@
 <section class="my-10 container items-center">
-  <h2 class="title text-center">{{ 'app.users.create_account' | t }}</h2>
+  <h2 class="bigtitle text-center">{{ 'app.users.create_account' | t }}</h2>
 
   {% include 'theme/simple/users/form' %}
 </section>
