--- a/app/views/partials/theme/simple/admin/activity_log.liquid
+++ b/app/views/partials/theme/simple/admin/activity_log.liquid
@@ -1,4 +1,4 @@
-<h2 class="mb-6 text-2xl">{% echo 'app.activities.list' | t %} ({{ activities.total_entries }})</h2>
+<h2 class="bigtitle">{% echo 'app.activities.list' | t %} ({{ activities.total_entries }})</h2>
 <table class="w-full table-auto">
   {% for activity in activities.results %}
     <tr>
