--- a/app/views/partials/theme/simple/categories/new.liquid
+++ b/app/views/partials/theme/simple/categories/new.liquid
@@ -1,3 +1,3 @@
-<h1 class="mb-3 text-2xl">{{ 'app.models.categories.new' | t }}</h1>
+<h2 class="bigtitle">{{ 'app.models.categories.new' | t }}</h2>
 
 {% include 'theme/simple/categories/form', category: category %}
