--- a/app/views/partials/theme/simple/dashboard/groups/empty_state.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/empty_state.liquid
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-around py-20">
-  <h1 class="text-2xl font-medium">
+  <h1 class="bigtitle">
     {{ 'app.groups.empty_state' | t }}
   </h1>
 
