--- a/app/views/partials/theme/simple/dashboard/groups/new.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/new.liquid
@@ -1,3 +1,3 @@
-<h1 class="mb-3 text-2xl">{{ 'app.groups.new_group' | t }}</h1>
+<h2 class="bigtitle">{{ 'app.groups.new_group' | t }}</h2>
 
 {% include 'theme/simple/dashboard/groups/form', group: group %}
