--- a/app/views/partials/theme/simple/dashboard/posts/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/edit.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">{{ 'app.models.posts.edit' | t }} {{ object.name  }}</h1>
+  <h2 class="bigtitle">{{ 'app.models.posts.edit' | t }} {{ object.name  }}</h2>
 </div>
 
 {% include 'theme/simple/dashboard/posts/form', object: object, presigned_url: presigned_url %}
