--- a/app/views/partials/theme/simple/dashboard/posts/edit_answer.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/edit_answer.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">{{ 'app.models.posts.edit_answer' | t }} {{ object.name  }}</h1>
+  <h1 class="bigtitle">{{ 'app.models.posts.edit_answer' | t }} {{ object.name  }}</h1>
 </div>
 
 {% liquid
