--- a/app/views/partials/theme/simple/dashboard/posts/new.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/new.liquid
@@ -1,3 +1,3 @@
-<h1 class="mb-3 text-2xl">{{ 'app.models.posts.new' | t }}</h1>
+<h2 class="bigtitle">{{ 'app.models.posts.new' | t }}</h2>
 
 {% include 'theme/simple/dashboard/posts/form', object: object, presigned_url: presigned_url %}
