--- a/app/views/partials/theme/simple/home/hero.liquid
+++ b/app/views/partials/theme/simple/home/hero.liquid
@@ -3,7 +3,7 @@
   <img src="{{ 'images/home-hero.jpg' | asset_url }}" alt="Hero image" class="hidden">
   <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50"></div>
   <div class="z-10 w-full p-8 md:p-16">
-    <h1 class="text-2xl font-black leading-none uppercase md:text-5xl">{{ 'app.hero.main-sentence' | t }}</h1>
+    <h1 class="bigtitle font-black leading-none uppercase md:text-5xl">{{ 'app.hero.main-sentence' | t }}</h1>
 
     <p class="text-xl font-semibold">
       {{ 'app.hero.secondary-sentence' | t }}
