--- a/app/views/partials/theme/simple/items/404.liquid
+++ b/app/views/partials/theme/simple/items/404.liquid
@@ -1,6 +1,6 @@
 <div class="container items-center mx-auto">
   <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
-    <h1 class="text-2xl">{{ 'app.items.items_404' | t }}</h1>
+    <h2 class="title">{{ 'app.items.items_404' | t }}</h2>
     <hr>
     <p class="text-lg">{{ 'app.items.first_question' | t }}</p>
   </div>
