--- a/app/views/partials/theme/simple/items/new.liquid
+++ b/app/views/partials/theme/simple/items/new.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">{{ 'app.items.new' | t }}</h1>
+  <h2 class="bigtitle">{{ 'app.items.new' | t }}</h2>
 </div>
 
 {% include 'theme/simple/items/form', item: item %}
