--- a/app/views/partials/theme/simple/orders/form.liquid
+++ b/app/views/partials/theme/simple/orders/form.liquid
@@ -41,5 +41,5 @@
 </form>
 
 {% if order.errors.base %}
-  <h3 class="text-red-400">{{ order.errors.base | join: ', ' }}</h3>
+  <h3 class="text-danger">{{ order.errors.base | join: ', ' }}</h3>
 {% endif %}
