--- a/app/views/partials/theme/simple/payments/credit_cards/index.liquid
+++ b/app/views/partials/theme/simple/payments/credit_cards/index.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">{{ 'app.credit_cards.name' | t }}</h1>
+  <h1 class="title">{{ 'app.credit_cards.name' | t }}</h1>
 </div>
 
 <div class="relative">
