--- a/app/views/partials/theme/simple/statuses/empty_state.liquid
+++ b/app/views/partials/theme/simple/statuses/empty_state.liquid
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-around py-20">
-  <h1 class="text-2xl font-medium">
+  <h2 class="bigtitle">
     {{ 'app.models.statuses.empty_state' | t }}
-  </h1>
+  </h2>
 
   <a href="/statuses/new" class="text-lg button">
     {{ 'app.models.statuses.add' | t }}
