--- a/app/views/partials/theme/simple/statuses/new.liquid
+++ b/app/views/partials/theme/simple/statuses/new.liquid
@@ -1,3 +1,3 @@
-<h1 class="mb-3 text-2xl">{{ 'app.models.statuses.new' | t }}</h1>
+<h2 class="bigtitle">{{ 'app.models.statuses.new' | t }}</h2>
 
 {% include 'theme/simple/statuses/form', status: status %}
