--- a/app/views/partials/theme/simple/terms-of-service.liquid
+++ b/app/views/partials/theme/simple/terms-of-service.liquid
@@ -1,8 +1,6 @@
 <div class="container w-full xl:w-4/5 mt-10 mb-32 text-lg">
-  <div class="text-2xl font-bold text-center">
-    <h1 class="uppercase">{{'app.title' | t}}</h1>
-    <h1>{{ 'app.terms.terms-of-service' | t }}</h1>
-  </div>
+  <h2 class="bigtitle text-center">{{'app.title' | t}}</h2>
+  <h3 class="title text-center">{{ 'app.terms.terms-of-service' | t }}</h3>
 
   <p class="mt-8 text-center text-sm">{{ 'app.terms.last-updated' | t }}</p>
 
@@ -16,19 +14,19 @@
   <p>{{ 'app.terms.and-the-prohibited' | t }}&nbsp;<a href="http://www.getmarketplace.co/prohibited_items_policy" class="link">http://www.getmarketplace.co/prohibited_items_policy</a>. </p>
   <p>{{ 'app.terms.all-such-terms' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.termination' | t }}</h3>
+  <h3 class="subtitle mt-7 font-bold">{{ 'app.terms.termination' | t }}</h3>
   <p class="mt-2">{{ 'app.terms.termination-content' | t }}&nbsp;</p>
 
-  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.user-disputes' | t }}</h3>
+  <h3 class="subtitle mt-7 font-bold">{{ 'app.terms.user-disputes' | t }}</h3>
   <p class="mt-2">{{ 'app.terms.user-disputes-content' | t }}&nbsp;</p>
 
-  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.general' | t }}</h3>
+  <h3 class="subtitle mt-7 font-bold">{{ 'app.terms.general' | t }}</h3>
   <p class="mt-2">{{ 'app.terms.general-content' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.your-privacy' | t }}</h3>
+  <h3 class="subtitle mt-7 font-bold">{{ 'app.terms.your-privacy' | t }}</h3>
   <p class="mt-2">{{ 'app.terms.your-privacy-content' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.questions' | t }}</h3>
+  <h3 class="subtitle mt-7 font-bold">{{ 'app.terms.questions' | t }}</h3>
   <p class="mt-2">{{ 'app.terms.please-contact' | t }}&nbsp;
     <a href="mailto:support@getmarketplace.co" class="link">support@getmarketplace.co</a>
     {{ 'app.terms.please-contact-continue' | t  }}
