--- a/scaffold/generators/crud/templates/views/partials/theme/simple/model/empty_state.liquid
+++ b/scaffold/generators/crud/templates/views/partials/theme/simple/model/empty_state.liquid
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-around py-20">
-  <h1 class="text-2xl font-medium">
+  <h3 class="title">
     {{ 'app.models.<%= modelNamePlural %>.empty_state' | t }}
-  </h1>
+  </h3>
 
   <a href="/<%= modelNamePlural %>/new" class="text-lg button">
     {{ 'app.models.<%= modelNamePlural %>.add' | t }}
