--- a/scaffold/generators/crud/templates/views/partials/theme/simple/model/new.liquid
+++ b/scaffold/generators/crud/templates/views/partials/theme/simple/model/new.liquid
@@ -1,3 +1,3 @@
-<h1 class="mb-3 text-2xl">{{ 'app.models.<%= modelNamePlural %>.new' | t }}</h1>
+<h3 class="title">{{ 'app.models.<%= modelNamePlural %>.new' | t }}</h3>
 
 {% include 'theme/simple/<%= modelNamePlural %>/form', <%= modelName %>: <%= modelName %> %}
