--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -51,13 +51,16 @@
 
   <div class="mb-2 w-full md:w-full">
     <h1 class="text-2xl">Slack Notifications</h1>
+    <span>lorem ipsum</span></br>
+    <span>lorem ipsum</span></br>
+    <span>lorem ipsum</span></br>
   </div>
 
   <div class="w-full p-6 mt-8 mb-2 bg-gray-200 rounded lg:w-4/6 md:w-3/4">
     <form action="/marketplace_setup/constants/set" method="post">
       {% include 'authenticity_token' %}
       <input type="hidden" name="name" value="slack"></input>
-      <input type="text" name="value" value="text"></input>
+      <input type="text" name="value" value=""></input>
       <input type="submit" value="submit" class="mt-3 button">
     </form>
   </div>
