--- a/app/views/partials/theme/simple/ui/icon.liquid
+++ b/app/views/partials/theme/simple/ui/icon.liquid
@@ -30,6 +30,12 @@
   {% when 'pencil' or 'all' %}
   <svg data-icon="pencil" {{ attrs | html_safe }}><defs><style>.a{fill:none;stroke:currentColor;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5px}</style></defs><path class="a" d="M22.19 1.81a3.639 3.639 0 00-5.17.035l-14.5 14.5L.75 23.25l6.905-1.771 14.5-14.5a3.637 3.637 0 00.035-5.169zM16.606 2.26l5.134 5.134M2.521 16.344l5.139 5.13"/></svg>
 
+  {% when 'dashUp' or 'all' %}
+  <svg data-icon="dashUp" {{ attrs | html_safe }}><path d="M.75 17.189L11.47 6.47a.749.749 0 011.06 0l10.72 10.719" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"/></svg>
+
+  {% when 'dashDown' or 'all' %}
+  <svg data-icon="dashDown" {{ attrs | html_safe }}><path d="M23.25 7.311L12.53 18.03a.749.749 0 01-1.06 0L.75 7.311" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"/></svg>
+
 
   {% else %}
 
