Move all inline css to webpack

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,5 +1,7 @@
 @import "./components/button.css";
 @import "./components/card.css";
+@import "./components/follow.css";
 @import "./components/forms.css";
 @import "./components/gallery.css";
+@import "./components/groups.css";
 @import "./components/markdown.css";
