--- a/app/views/partials/theme/simple/groups/join_button.liquid
+++ b/app/views/partials/theme/simple/groups/join_button.liquid
@@ -13,11 +13,11 @@
     title="join/leave"
     data-join-group="{% print group.id %}">
 
-    <span class="button join">
+    <span class="button join pointer-events-none">
       {{ 'app.groups.join' | t }}
     </span>
 
-    <span class="button button-secondary leave">
+    <span class="button button-secondary leave pointer-events-none">
       {{ 'app.groups.leave' | t }}
     </span>
   </button>
