--- a/app/views/partials/lib/commands/constants/set.liquid
+++ b/app/views/partials/lib/commands/constants/set.liquid
@@ -3,10 +3,10 @@
   function object = 'lib/commands/constants/set/check', object: object
 
   if object.valid
-    if object.value == blank
-      function object = 'lib/commands/execute', mutation_name: 'marketplace_setup/unset_constant' object: object, selection: "constant"
-    else
+    if object.value != blank
       function object = 'lib/commands/execute', mutation_name: 'marketplace_setup/set_constant' object: object, selection: "constant"
+    else
+      function object = 'lib/commands/execute', mutation_name: 'marketplace_setup/unset_constant' object: object, selection: "constant"
     endif
   endif
 
