--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -51,16 +51,17 @@
 
   <div class="mb-2 w-full md:w-full">
     <h1 class="text-2xl">Slack Notifications</h1>
-    <span>lorem ipsum</span></br>
-    <span>lorem ipsum</span></br>
-    <span>lorem ipsum</span></br>
+    <span>You might want to have slack notifications for your questions module</span></br>
   </div>
 
   <div class="w-full p-6 mt-8 mb-2 bg-gray-200 rounded lg:w-4/6 md:w-3/4">
     <form action="/marketplace_setup/constants/set" method="post">
       {% include 'authenticity_token' %}
+      <label class="block mt-4">
       <input type="hidden" name="name" value="slack"></input>
       <input type="text" name="value" value=""></input>
-      <input type="submit" value="submit" class="mt-3 button">
+      <input type="submit" class="ml-3 button button" value="submit" class="mt-3 button"></br>
+      <label class="block mt-4"><b>Currently your slack-webhook is set as:</b></br> {% if context.constants.SLACK_WEBHOOK_URL == blank %}none{% else %}{{ context.constants.SLACK_WEBHOOK_URL }}{% endif %}</label>
+      </label>
     </form>
   </div>
