formatting for longer questions titles

--- a/app/views/partials/theme/simple/posts/show.liquid
+++ b/app/views/partials/theme/simple/posts/show.liquid
@@ -2,7 +2,7 @@
   {% include 'theme/simple/posts/metatags', post: post %}
 {% endcontent_for %}
 
-<h1 class="mb-3 text-4xl font-medium">
+<h1 class="mb-3 text-4xl font-medium break-words">
   {{ root_post.title }}
 </h1>
 
