Don't have to pass context to function

--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -7,7 +7,7 @@
   </head>
 
   <body class="font-sans antialiased leading-normal text-content bg-page">
-    {% include 'theme/simple/layout/main', current_user_id: context.current_user.id %}
+    {% include 'theme/simple/layout/main', current_profile: context.exports.current_profile %}
     {% yield 'custom_scripts' %}
   </body>
 </html>
