--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -1,14 +1,10 @@
 <div class="container flex flex-col min-h-screen px-5">
   {% liquid
-    if context.current_user.id
-      assign profile = context.session.profile | default: '{}' | parse_json
-    endif
-    include 'theme/simple/layout/header', profile: profile
+    include 'theme/simple/layout/header', profile: current_profile
   %}
 
   <main class="flex-1">
     {% include 'lib/flash/display' %}
-
     {% if context.location.pathname contains '/dashboard' %}
       <div class="flex flex-col md:flex-row">
         {% include 'theme/simple/dashboard/sidebar' %}
@@ -23,6 +19,5 @@
 
   {% include 'theme/simple/layout/footer' %}
   {% include 'modules/monitoring/theme/feedback' %}
-
   {% include 'theme/simple/layout/scripts' %}
 </div>
