Load profile on static page so we have proper menu displayed

--- a/app/views/pages/about-us.liquid
+++ b/app/views/pages/about-us.liquid
@@ -1,3 +1,5 @@
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+
   render 'theme/simple/about-us'
 %}
