--- a/app/views/pages/posts/index.liquid
+++ b/app/views/pages/posts/index.liquid
@@ -1,4 +1,5 @@
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
   function posts = 'lib/queries/posts/search', limit: 100, parent_id_exists: false, tags: context.params.tag
 
   include 'theme/simple/posts/index', posts: posts
