--- a/app/views/pages/quick_search/index.liquid
+++ b/app/views/pages/quick_search/index.liquid
@@ -1,4 +1,5 @@
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
   function records = 'lib/queries/models/search', keyword: context.params.qkeyword, limit: 15
 
   render 'theme/simple/quick_search/index', records: records
