--- a/app/views/pages/categories.liquid
+++ b/app/views/pages/categories.liquid
@@ -2,6 +2,8 @@
 slug: c
 ---
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+
   assign template = "/c/{+category}"
   assign query = context.location.pathname | extract_url_params: template
 
