--- a/app/views/pages/posts/show.liquid
+++ b/app/views/pages/posts/show.liquid
@@ -2,7 +2,7 @@
 slug: posts/:slug
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: false
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
 
   assign post_id = context.params.slug | split: '-' | last
   function post = 'lib/queries/posts/find', id: post_id
